# radioscope

./: .env  .env.example  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
deploy/: radioscope.service
scripts/: build.sh  configure_pi_wifi.sh  deploy.sh  troubleshoot_wifi.sh
src/: audio.rs  config.rs  devices.rs  events.rs  main.rs  sniffer.rs  ui.rs  web.rs
