[package]
name = "radioscope"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
cpal = "0.15"
dioxus = { version = "0.7", features = ["ssr"] }
dioxus-ssr = "0.7"
lazy_static = "1"
pcap = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "process"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
